Changed background and form page. Fixed results page alignment

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,37 +1,47 @@
 body {
     align-items: center;
-    background-color: #000;
+    background-color: #31507E;
     display: flex;
     justify-content: center;
     height: 100vh;
-  }
-  
-  form {
+    background-image: url("../assets/bg.jpg");
+}
+
+form {
     background-color: #15172b;
     border-radius: 20px;
     box-sizing: border-box;
-    height: 500px;
+    height: 65vh;
     padding: 20px;
-    width: 320px;
-  }
-  
-  .title {
+    width: 25vw;
+}
+
+.bg_char_img {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    width: 40vw;
+    height: 80vh;
+}
+
+.title {
     color: #eee;
     font-family: sans-serif;
     font-size: 36px;
     font-weight: 600;
     margin-top: 10px;
-  }
-  
-  .subtitle {
+}
+
+.subtitle {
     color: #eee;
     font-family: sans-serif;
     font-size: 16px;
     font-weight: 600;
     margin-top: 10px;
-  }
-  
-  .input {
+}
+
+.input {
     background-color: #303245;
     border-radius: 12px;
     border: 0;
@@ -43,10 +53,10 @@ body {
     padding: 4px 20px 5px;
     margin-bottom: 10px;
     width: 100%;
-  }
-  
-  .submit {
-    background-color: #08d;
+}
+
+.submit {
+    background-color: rgb(70, 70, 70);
     border-radius: 12px;
     border: 0;
     box-sizing: border-box;
@@ -54,13 +64,24 @@ body {
     cursor: pointer;
     font-size: 18px;
     height: 50px;
-    margin-top: 13px;
+    margin-top: 30px;
     outline: 0;
     text-align: center;
     width: 100%;
-  }
-  
-  .submit:active {
-    background-color: #06b;
-  }
-  
+    opacity: 30%;
+}
+
+.submit-active {
+    background-color: rgb(15, 132, 227);
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 30px;
+    outline: 0;
+    text-align: center;
+    width: 100%;
+}
